[package]
name = "emulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jit = {path = "../jit"}
base = {path = "../system/base"}
sync = {path = "../misc/sync"}
resources = {path = "../misc/resources"}
packed_struct = "0.10.0"
vm_memory = {path = "../vm_memory"}
simple-soft-float = "0.1.0"
goblin = "0.5"
libc = "*"
anyhow = "*"
multimap = "0.8.3"
thiserror = "1.0.20"
num = "0.4.0"
kernel_loader = {path = "../misc/kernel_loader"}
setjmp = "0.1.4"
lazy_static = "1.4.0"