[package]
name = "jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
base = {path = "../system/base"}

[dependencies.iced-x86]
version = "1.17.0"
default-features = false
# See below for all features
features = ["std", "decoder", "masm", "intel", "code_asm"]
