[package]
name = "cros_async"
version = "0.1.1"
authors = ["The Chromium OS Authors"]
edition = "2021"

[dependencies]
async-trait = "0.1.36"
async-task = "4"
cfg-if = "1.0.0"
data_model = { path = "../data_model" } # provided by ebuild
intrusive-collections = "0.9"
libc = "*"
once_cell = "1.7.2"
paste = "1.0"
pin-utils = "0.1.0-alpha.4"
remain = "0.2"
slab = "0.4"
sync = { path = "../sync" } # provided by ebuild
base = { path = "../../system/base" } # provided by ebuild
thiserror = "1.0.20"
audio_streams = { path = "../audio_streams" } # provided by ebuild
anyhow = "1.0"
serde = "*"

[target.'cfg(unix)'.dependencies]
io_uring = { path = "../../system/io_uring" } # provided by ebuild

[target.'cfg(windows)'.dependencies]
winapi = "*"
win_util = { path = "../../system/win_util" }
smallvec = "*"

[dependencies.futures]
version = "*"
default-features = false
features = ["alloc"]

[dev-dependencies]
futures = { version = "*", features = ["executor"] }
futures-executor = { version = "0.3", features = ["thread-pool"] }
futures-util = "0.3"
tempfile = "3"


