[package]
name = "kernel_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
data_model = { path = "../../misc/data_model" }
libc = "*"
base = { path = "../../system/base" }
remain = "*"
resources = { path = "../../misc/resources" }
thiserror = "*"
vm_memory = { path = "../../vm_memory" }

[dev-dependencies]
tempfile = "3"
