[package]
name = "base"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"

[features]
chromeos = []

[dependencies]
audio_streams = { path = "../../misc/audio_streams" } # provided by ebuild
base_event_token_derive = { path = "base_event_token_derive", version = "*" }
data_model = { path = "../../misc/data_model" } # provided by ebuild
sync = { path = "../../misc/sync" } # provided by ebuild

cfg-if = "*"
chrono = "*"
env_logger = "0.9.0"
libc = "*"
log = "0.4"
once_cell = "1.7"
remain = "0.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "*"
smallvec = "1.6.1"
tempfile = "3"
thiserror = "1.0.20"
uuid = { version = "0.8.2", features = ["v4"] }
zerocopy = "*"


[target.'cfg(windows)'.dependencies]
rand = "0.8"
winapi = "*"
win_util = { path = "../win_util"}

[target.'cfg(windows)'.dev-dependencies]
regex = "*"
