[package]
name = "kvm"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[dependencies]
data_model = { path = "../../misc/data_model" }
kvm_sys = { path = "../kvm_sys" }
libc = "*"
base = { path = "../base" }
sync = { path = "../../misc/sync" }
vm_memory = { path = "../../vm_memory" }
